force-app/main/default/objects/Contact/fields/TrailForge_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>TrailForge_Access_Code__c</fullName>
    <description>Current active TrailForge access code for this contact. Cleared when code is used or expired.</description>
    <label>TrailForge Access Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>