force-app/main/default/objects/Contact/fields/TrailForge_Enrollment_Count__c.field-meta.xml
<CustomField>
    <fullName>TrailForge_Enrollment_Count__c</fullName>
    <label>TrailForge Enrollment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>