force-app/main/default/objects/Contact/fields/TrailForge_Last_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>TrailForge_Last_Course_Name__c</fullName>
    <label>TrailForge Last Course</label>
    <length>255</length>
    <type>Text</type>
</CustomField>