force-app/main/default/objects/Contact/fields/TrailForge_Overall_Progress__c.field-meta.xml
<CustomField>
    <fullName>TrailForge_Overall_Progress__c</fullName>
    <label>TrailForge Overall Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>