force-app/main/default/objects/Contact/fields/TrailForge_Profile_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>TrailForge_Profile_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TrailForge Profile Confirmed</label>
    <type>Checkbox</type>
</CustomField>